--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "next": "latest",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-js-pagination": "^3.0.3",
+    "react-paginate": "^7.0.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "@types/react-js-pagination": "^3.0.3",
+    "@types/react-paginate": "^6.2.1",
     "typescript": "4.0"
   },
   "license": "MIT"
