--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
     "next": "latest",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
